# Irma

./: .gitignore  CLAUDE.md  PLAN.md  README.md
apps/desktop/: README.md  companion.html  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: main.tsx  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: claude_pty.rs  lib.rs  main.rs  tray.rs  windows.rs
apps/launcher/: Info.plist  README.md  build.sh  launch.sh  stop.sh
docs/: ARCHITECTURE.md  BACKEND.md  DESKTOP.md  KICKOFF_PROMPT.md  LLM.md
docs/superpowers/: handoff-2026-05-30-1630.md  handoff-2026-05-30-evening.md
services/api/: .env.example  README.md  pyproject.toml
services/api/scripts/: email_today_calendar.py
services/api/src/irma_api/: __init__.py  __main__.py  app.py  config.py  main.py
services/api/src/irma_api/agents/: __init__.py  base.py  codebase_agent.py  daily_brief.py  email_render.py  lead_agent.py  llm.py  time_agent.py
services/api/src/irma_api/agents/prompts/: __init__.py  irma_persona.md
services/api/src/irma_api/auth/: google_oauth.py
services/api/src/irma_api/integrations/reminders/: bridge.py  inbox.py  models.py  planner.py  sync.py
services/api/src/irma_api/models/: __init__.py  brief.py  daily_brief.py  project.py  signal.py  task.py
services/api/src/irma_api/routers/: __init__.py  brief.py  chat.py  email.py  integrations.py  local_models.py  projects.py  reminders.py  settings.py  signals.py  standup.py  state.py  tasks.py
services/api/src/irma_api/runtime/: __init__.py  daily_job.py  scheduler.py  state.py
services/api/src/irma_api/store/: __init__.py  errors.py  migrations.py  sqlite.py
services/api/src/irma_api/store/repos/: __init__.py  brief_cache_repo.py  project_repo.py  snapshot_repo.py  task_repo.py
services/api/src/irma_api/tools/: base.py  calendar.py  projects.py  resend.py  tasks.py
services/api/src/nofari_api/: __init__.py  __main__.py  app.py  config.py  logging.py  main.py
services/api/src/nofari_api/agents/: __init__.py  base.py  codebase_agent.py  lead_agent.py  time_agent.py
services/api/src/nofari_api/models/: __init__.py  brief.py
services/api/src/nofari_api/routers/: __init__.py  signals.py  standup.py  state.py
services/api/src/nofari_api/runtime/: __init__.py  scheduler.py
services/api/src/nofari_api/store/: __init__.py  sqlite.py
services/api/tests/: conftest.py  test_app_boot.py  test_app_reminders_lifespan.py  test_brief_cache_repo.py  test_brief_model.py  test_brief_parse.py  test_calendar_tool.py  test_chat_backends_filter.py  test_chat_tool_loop.py  test_cli_auth.py  test_codebase_agent.py  test_create_calendar_event_tool.py  test_daily_brief_service.py  test_daily_job.py  test_email_render.py  test_integrations_router.py  test_lead_agent_horizons.py  test_llm_claude_cli.py  test_llm_tool_use.py  test_migrations.py  test_oauth_flow.py  test_post_write_sync_trigger.py  test_progress_delta.py  test_project_model.py  test_project_repo.py  test_project_tools.py  test_resend_tool.py  test_routers_brief.py  test_routers_brief_email.py  test_routers_projects.py  test_routers_tasks.py  test_scheduler_daily.py  test_scheduler_reminders.py  test_settings.py  test_settings_reminders.py  test_signal_attribution.py  test_signal_schema.py  test_snapshot_repo.py  test_state_bus.py  test_task_model.py  (+3 more)
services/api/tests/integrations/: test_reminders_bridge.py  test_reminders_e2e.py  test_reminders_inbox.py  test_reminders_models.py  test_reminders_planner.py  test_reminders_router.py  test_reminders_sync.py
services/api/tests/integrations/fixtures/: fake_helper.py
(+55 files in other folders)
