[package]
name = "irma-desktop"
version = "0.1.0"
description = "Irma desktop shell — companion sprite + dashboard"
edition = "2021"

[lib]
# The `_lib` suffix is required so the library and binary crate names do not
# collide on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "irma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tauri-plugin-autostart = "2.5.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
